[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/items/fish.png" type="Texture" id=1]
[ext_resource path="res://scenes/GUI/ObjectPopup/ObjectPopupButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/CityHUD/TradeInfoContainer.gd" type="Script" id=3]

[node name="TradeInfoContainer" type="Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -308.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
button_color = Color( 0, 0.647059, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 100, 60 )
texture = ExtResource( 1 )

[node name="Container" type="Container" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -20.0
margin_right = -70.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductName" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_right = 13.0
margin_bottom = 14.0
text = "Product: Fish"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductCost" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 20.0
margin_right = 13.0
margin_bottom = 34.0
text = "Cost: 600"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductQuantity" type="Label" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 40.0
margin_right = 13.0
margin_bottom = 54.0
text = "Quantity: 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectPopupButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = -60.0
margin_right = 70.0001
margin_bottom = -20.0
btn_color = Color( 0, 0.647059, 1, 1 )
[connection signal="pressed" from="ObjectPopupButton" to="." method="_on_ObjectPopupButton_pressed"]
